safetalk_ai/source_check.txt
  File "<string>", line 9
    print(f'Sources: {df[\
                        ^
SyntaxError: '[' was never closed
